--- a/public/css/feedback.css
+++ b/public/css/feedback.css
@@ -2,14 +2,142 @@ body{
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--primary-bg);
 }
 
 :root {
-  --primary-bg: #1C4632;
-  --primary-text: whitesmoke;
+  --primary-bg: #f3f7ea;
+  --second-bg: #2C3930;
+  --primary-text: #F4F1DE;
   --muted-text: #DCD7C9;
-  --shadow: rgba(143, 109, 109, 0.5);
+  --black-text: #20341e;
+  --primary-green: #9abe4a;
+  --shadow: rgb(0, 0, 0, 0.5);
 }
+
+@media(max-width: 700px) {
+  body{
+    overflow-x: hidden !important;
+  }
+
+  .feedback-content{
+    width: 100% !important;
+  }
+
+  .feedback-content h1{
+    font-size: clamp(20px, 3vw, 18px);
+  }
+  .paragraph-content{
+    font-size: clamp(15px, 3vw, 18px);
+  }
+  #textareaDescription {
+    width: 80% !important;
+  }
+
+  .row-container {
+    width: 80% !important;
+  }
+
+  .row-container select {
+    width: 50% !important;
+  }
+  .feedback-selects button {
+    width: 80% !important;
+  }
+
+  .mobile-nav-bar {
+    display: flex !important;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    gap: 45px;
+    color: var(--primary-text);
+    /* Utilizando a variavel criada ali em cima para não ficar repetindo ou adivinhando cores */
+    background-color: var(--primary-bg);
+    margin: 0;
+    height: 10%;
+    padding: 10px;
+    font-size: 20px;
+  }
+
+  .default-nav-bar {
+    display: none !important;
+  }
+
+  .side-bar {
+    /* Deixa o container acima dos outros elementos html */
+    display: flex !important;
+    position: fixed;
+    z-index: 1000;
+    background-color: var(--second-bg);
+    height: 100%;
+    width: 35%;
+   /*  box-shadow: 4px 0 10px rgba(0, 0, 0, 0.5); */
+    top: 0;
+    left: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 40px;
+    gap: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+    transform: translateX(-100%);
+  }
+
+  .side-bar.active {
+    transform: translateX(0);
+  }
+
+  .side-bar a {
+    text-decoration: none !important;
+    color: var(--primary-text);
+  }
+  .side-bar-auth-container{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    height: fit-content;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 30px;
+  }
+  .side-bar-links-container{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    height: fit-content;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .side-bar-links-container a:hover {
+    cursor: pointer;
+  }
+  .mobile-nav-bar button {
+    outline: none;
+    border: none;
+    color: var(--black-text);
+    background-color: transparent;
+    width: 20%;
+    height: 10%;
+    transition: 0.5s;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .log-button{
+    border: 1px solid var(--primary-text) !important;
+    color: var(--primary-text) !important;
+  }
+
+}
+
 
 .feedback-container {
   width: 100%;
@@ -34,42 +162,61 @@ body{
 
 .feedback-content {
   width: 45%;
-  height: 500px;
+  height: 700px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-bottom: 150px;
 }
 
 .paragraph-content{
-  color: var(--primary-bg);
+  color: var(--black-text);
   opacity: 80%;
   text-align: center;
 }
 .feedback-content h1 {
-  color: var(--primary-bg);
+  color: var(--black-text);
   font-weight: bolder;
 }
+
+.feedback-content span {
+  color: var(--primary-green);
+}
+
 .feedback-selects{
   width: 100%;
-  height: 500px;
-  gap: 20px;
+  height: 100%;
+  gap: 10px;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: start;
   padding-bottom: 20px;
 }
+
+.feedback-selects button {
+  width: 100%;
+  background-color: var(--black-text);
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  transition: 0.5s;
+  color: var(--primary-text);
+  font-weight: bold;
+  height: 18%;
+}
+
 #textareaDescription {
   width: 100%;
-  height: 30%;
+  height: 40%;
   resize: none;
   border-radius: 10px;
-  border: 1px solid var(--primary-bg);
+  border: 1px solid var(--black-text);
   text-align: start;
   vertical-align: top;
-  padding-top: 10px;
-  padding-left: 10px;
+  padding: 10px;
+  background-color: transparent;
 }
 
 /* #textareaDescription::placeholder {
@@ -79,13 +226,9 @@ body{
   align-items: start;
 } */
 
-#buttonDescription {
-  width: 100%;
-}
-
 .row-container {
   width: 100%;
-  height: 20%;
+  height: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -94,32 +237,18 @@ body{
 
 .row-container select {
   width: 100%;
-  height: 80%;
-  border: 1px solid var(--primary-bg);
+  height: 60%;
+  border: 1px solid var(--black-text);
   border-radius: 10px;
   background-color: transparent;
   box-shadow: none;
-/*padding: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center; */
+  padding: 10px;
 }
 
 /* .row-container select:focus{
   outline: none;
   border: none;
 } */
-
-.feedback-selects button {
-  height: 20%;
-  background-color: var(--primary-bg);
-  border: none;
-  border-radius: 10px;
-  color: var(--primary-text);
-  font-weight: bold;
-  font-size:small;
-  transition: 0.5s;
-}
 
 .feedback-selects button:hover {
   cursor: pointer;
@@ -130,8 +259,8 @@ body{
 
 .carousel {
   position: relative;
-  width: 800px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   background-color: transparent;
   overflow: hidden;
   display: flex;
@@ -143,10 +272,13 @@ body{
 .carousel-item {
   position: absolute;
   width: 150px;
-  height: 100px;
+  height: 120px;
   flex: 0 0 auto;
   transition: all 0.5s ease;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .carousel-item img {
   width: 60%;
@@ -158,4 +290,274 @@ body{
 .carousel-item.active {
   transform: scale(1.3);
   z-index: 10;
+}
+
+.default-nav-bar {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--black-text);
+  /* Utilizando a variavel criada ali em cima para não ficar repetindo ou adivinhando cores */
+  background-color: var(--primary-bg);
+  padding: 10px;
+  margin: 0;
+  height: 10%;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.nav-selected {
+  color: var(--muted-text) !important;
+}
+
+.default-nav-bar a {
+  text-decoration: none;
+  outline: none;
+  border: none;
+  transition: 0.5s;
+  color: var(--black-text);
+}
+
+.default-nav-bar a:hover {
+  color: var(--muted-text);
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.default-nav-links-container{
+  width: fit-content;
+  display: flex;
+  gap: 50px;
+  align-items: center;
+  color: var(--black-text);;
+}
+.default-nav-auth-container{
+  width: fit-content;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 20px;
+  margin-right: 20px;
+}
+
+.log-button{
+  width: 150px;
+  height: 40px;
+  background-color: transparent;
+  border: 1px solid var(--black-text);
+  border-radius: 10px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: var(--black-text);
+}
+.log-button:hover{
+  opacity: 80%;
+  cursor: pointer;
+}
+
+.sign-button{
+  width: 150px;
+  height: 40px;
+  background-color: var(--black-text);
+  border: none;
+  border-radius: 10px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: var(--primary-text);
+}
+
+.sign-button:hover{
+  opacity: 80%;
+  cursor: pointer;
+}
+
+.logo-nav-container {
+  width: fit-content;
+  margin-left: 20px;
+}
+.loading-gif{
+  height: 100%;
+  width: 12%;
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease;
+}
+#overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+#modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.8);
+  background: #fff;
+  padding: 20px;
+  z-index: 1001;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  border-radius: 10px;
+  background-color: var(--primary-bg);
+  width: 40%;
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  color: var(--black-text);
+}
+
+#modal span {
+  color: var(--primary-green);
+}
+
+#modal p {
+  font-size: medium;
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#modal button {
+  background-color: var(--black-text);
+  color: var(--primary-text);
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  width: 40%;
+  height: 18%;
+  align-self: flex-end;
+}
+
+#modal.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.side-bar {
+  display: none;
+}
+
+.footer{
+  background-color: var(--second-bg);
+  display: flex;
+  padding: 23px;
+  width: 100%;
+  margin-top: -75px;
+}
+
+footer h5 {
+  font-size: 18px;
+/*   margin-bottom: 10px; */
+  color: white;
+/*   margin-left: 100px; */
+}
+
+.contact {
+  width: 30%;
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Espaço entre ícone e texto */
+  margin-bottom: 10px;
+  font-size: small;
+  font-weight: normal;
+  justify-content: start;
+  height: fit-content;
+}
+
+.icon {
+  height: 30px; /* Ajuste o tamanho conforme necessário */
+}
+
+.iconwpp {
+  height: 40px; /* Ajuste o tamanho conforme necessário */
+}
+
+.text {
+  font-size: 14px;
+  color: white;
+  transition: 0.2s;
+/*   margin-right: 100px;
+ */}
+ .text:hover {
+  color: var(--primary-bg);
+  transition: 0.2s;
+  cursor: pointer;
+ }
+
+.talk-to-us-footer{
+  width: 50%;
+  display: flex; 
+  flex-direction: column;
+  padding-left: 50px;
+  align-items: start;
+  justify-content: center;
+}
+
+.respira-footer-row {
+  display: flex;
+  align-items: center;
+  color: var(--primary-text);
+  font-weight: bold;
+  width: 100%;
+  gap: 10px;
+}
+
+#footer-header{
+  padding-top: 40px;
+  color: var(--muted-text);
+}
+
+#rightRespira{
+  font-size: smaller;
+  color: var(--muted-text);
+}
+.link-text {
+  text-decoration: none;
+  border: none;
+  color: var(--primary-text);
+  transition: 0.2s;
+}
+
+.link-text:hover{
+  transition: 0.2s;
+  color: var(--primary-bg);
+}
+
+.our-social-media-footer{
+  width: 50%;
+  display: flex; 
+  flex-direction: column;
+  padding-left: 50px;
+  align-items: start;
+  justify-content: center;
+  gap: 10px;
+}
+
+.about-us-footer{
+  width: 50%;
+  display: flex; 
+  flex-direction: column;
+  padding-left: 50px;
+  align-items: start;
+  justify-content: center;
 }
