--- a/public/css/index.css
+++ b/public/css/index.css
@@ -123,7 +123,7 @@
     flex-direction: column !important;
     gap: 20px;
     width: 100%;
-    height: 150vh !important;
+    height: 170vh !important;
     justify-content: center;
   }
 
@@ -591,11 +591,6 @@ p {
   padding-bottom: 20px;
   align-items: center;
   background-color: var(--primary-bg);
-  /* background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment:fixed;
-  background-image: url("../assets/imgcid.png"); */
 }
 
 .cidade {
@@ -611,10 +606,10 @@ p {
 
 .historia p {
   width: 40%;
-  color: var(--primary-text);
+  color: var(--primary-bg);
   font-size: 18px;
   font-weight: bold;
-  background: var(--black-text);
+  background-color: var(--black-text);
   padding: 10px 20px;
   border-radius: 15px;
 }
@@ -848,7 +843,7 @@ body {
   align-items: center;
   justify-content: start;
   padding-top: 100px;
-  background-image: url("https://images.pexels.com/photos/311617/pexels-photo-311617.jpeg?cs=srgb&dl=pexels-vinipimenta-311617.jpg&fm=jpg");
+  background-image: url("#");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
