--- a/public/css/paginaIntera.css
+++ b/public/css/paginaIntera.css
@@ -9,7 +9,7 @@
     --primary-text: #000000;
     --second-text: #EEEEEE;
     --muted-text: #DCD7C9;
-    --shadow: rgba(0, 0, 0, 0.5) 0px 4px 6px;
+    --shadow: rgba(0, 0, 0, 0.5) 0px 1px 3px;
     ;
 }
 
@@ -20,11 +20,12 @@
 
     display: flex !important;
     width: 100vw;
-    justify-content: space-around;
-    align-items: center;
     background-color: var(--second-bg);
-    gap: 46%;
     font-size: 20px;
+    gap: 33%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
 
 }
 
@@ -35,6 +36,17 @@
 }
 
 #id-logo-nav-bar {
+    width: 100%;
+    height: 100%;
+}
+
+.img-nav-alerta {
+    width: 5%;
+    height: 100%;
+    padding-right: 0 !important;
+}
+
+#id-img-nav-alerta {
     width: 100%;
     height: 100%;
 }
@@ -151,7 +163,6 @@
 
 }
 
-
 .primeira-kpi {
 
     background-color: var(--primary-bg);
@@ -159,28 +170,51 @@
     height: 80%;
     border-radius: 16px;
     box-shadow: var(--shadow);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 
 }
 
 .segunda-kpi {
 
     background-color: var(--primary-bg);
-    ;
+    display: flex;
     width: 33%;
     height: 80%;
     border-radius: 16px;
     box-shadow: var(--shadow);
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 
 }
 
 .terceira-kpi {
-
-    background-color: var(--primary-bg);;
+    display: flex;
+    background-color: var(--primary-bg);
     width: 33%;
     height: 80%;
     border-radius: 16px;
     box-shadow: var(--shadow);
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 
+}
+
+.titulo-kpi {
+    font-size: 1vw;
+    color: var(--title-text);
+    margin-top: 10px;
+}
+
+.dado-kpi {
+    font-size: 2.0vw;
 }
 
 /*FILTRO*/
@@ -191,6 +225,7 @@
     width: 100vw;
     height: 10vh;
     margin-top: 5px;
+    margin-bottom: 10px;
     justify-content: flex-end;
     align-items: center;
 
@@ -206,5 +241,50 @@
     border-radius: 5px;
     box-shadow: var(--shadow);
     margin-right: 12%;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 4%;
 
+}
+
+.img-filtro {
+    display: flex;
+    width: 30%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.text-filtro {
+    font-size: 2.005vw;
+    color: var(--title-text);
+}
+
+/*DASHBOARDS*/
+
+.dashboards {
+    width: 100vw;
+    flex-direction: column;
+    height: auto;
+    display: flex;
+    background-color: var(--primary-bg);
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.primeira-dashboard {
+    width: 80vw;
+    height: auto;
+    background-color: var(--primary-bg);
+    border-radius: 16px;
+    box-shadow: var(--shadow);
+}
+
+.segunda-dashboard {
+    width: 80vw;
+    height: auto;
+    background-color: var(--primary-bg);
+    border-radius: 16px;
+    box-shadow: var(--shadow);
 }
