--- a/public/css/paginaIntera.css
+++ b/public/css/paginaIntera.css
@@ -223,7 +223,7 @@
 
     display: flex;
     width: 100vw;
-    height: 10vh;
+    height: auto;
     margin-top: 5px;
     margin-bottom: 10px;
     justify-content: flex-end;
@@ -236,7 +236,7 @@
     display: flex;
     flex-direction: row;
     width: 18%;
-    height: 50%;
+    height: 5vh;
     background-color: var(--primary-bg);
     border-radius: 5px;
     box-shadow: var(--shadow);
@@ -258,6 +258,76 @@
 .text-filtro {
     font-size: 2.005vw;
     color: var(--title-text);
+}
+
+.fundo-escolher-filtro {
+    z-index: 2;
+    display: flex;
+    width: 100%;
+    height: 8000px;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+
+}
+
+.btn-sair {
+    margin-top: 1%;
+    margin-right: 92%;
+    position: absolute;
+    width: 5vw;
+    height: 4vh;
+}
+
+#btn-sair-filtro {
+    width: 100%;
+    height: 100%;
+}
+
+.escolher-filtro {
+    display: flex;
+    width: 80vw;
+    height: 69vw;
+    background-color: white;
+    position: fixed;
+    border-radius: 10px;
+    box-shadow: var(--shadow);
+    align-items: center;
+    flex-direction: column;
+
+}
+
+.filtro-text {
+    background-color: var(--primary-bg);
+    border-radius: 5px;
+    box-shadow: var(--shadow);
+    margin-top: 18px;
+    width: 80%;
+    height: 12.5%;
+
+}
+
+.filtro-btn {
+    display: flex;
+    width: 68%;
+    height: 20.5%;
+    margin-top: 12px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+}
+
+.filtro-btn-1 {
+    background-color: var(--primary-bg);
+    border-radius: 5px;
+    box-shadow: var(--shadow);
+    width: 30%;
+    height: 80%;
+
 }
 
 /*DASHBOARDS*/
