--- a/public/css/personal.css
+++ b/public/css/personal.css
@@ -1,14 +1,3 @@
-body {
-  padding: 0;
-  margin: 0;
-  /* height: 100vh; */
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  font-family: "Rubik", sans-serif;
-  flex-direction: column;
-}
-
 :root {
   --primary-bg: #f3f7ea;
   --second-bg: #CDE1A0;
@@ -24,10 +13,8 @@ body {
   --dropdown-bg: #E7F3CB;
   --dropdown-border: #2E482B;
   --dropdown-letter: #20341E;
+  --primary-green: #9abe4a;
 }
-
-
-/*MENU MOBILE*/
 
 .mobile-nav-bar {
   display: flex !important;
@@ -139,246 +126,6 @@ body {
   cursor: pointer;
 }
 
-
-/*MAIN*/
-
-.container {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  width: 100vw;
-  background-color: var(--primary-bg);
-}
-
-/*KPIS*/
-
-.kpis {
-
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  height: 40vh;
-  justify-content: center;
-  align-items: center;
-  margin-top: 22px;
-}
-
-.primeira-divisao-kpi {
-
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  gap: 50px;
-  height: 50%;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.primeira-kpi {
-
-  background-color: var(--primary-bg);
-  width: 33%;
-  height: 80%;
-  border-radius: 16px;
-  box-shadow: var(--shadow);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-
-}
-
-.segunda-kpi {
-
-  background-color: var(--primary-bg);
-  display: flex;
-  width: 33%;
-  height: 80%;
-  border-radius: 16px;
-  box-shadow: var(--shadow);
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-
-}
-
-.terceira-kpi {
-  display: flex;
-  background-color: var(--primary-bg);
-  width: 33%;
-  height: 80%;
-  border-radius: 16px;
-  box-shadow: var(--shadow);
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-
-}
-
-.titulo-kpi {
-  font-size: 1vw;
-  color: var(--title-text);
-  margin-top: 10px;
-}
-
-.dado-kpi {
-  font-size: 2.0vw;
-}
-
-/*FILTRO*/
-
-.filtro {
-  display: flex;
-  width: 100vw;
-  height: auto;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.filtro-aplicado {
-  display: flex;
-  flex-direction: row;
-  width: 18%;
-  height: 5vh;
-  background-color: var(--primary-bg);
-  border-radius: 5px;
-  box-shadow: var(--shadow);
-  margin-right: 12%;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 4%;
-  color: var(--dropdown-letter);
-  padding: 5px;
-}
-.filtro-aplicado:hover{
-  cursor: pointer;
-}
-
-.img-filtro {
-  display: flex;
-  width: 30%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-.text-filtro {
-  font-size: 2.005vw;
-  color: var(--title-text);
-}
-
-.fundo-escolher-filtro {
-  z-index: 2;
-  display: flex;
-  width: 100vw;
-  height: 8000px;
-  background-color: rgba(0, 0, 0, 0.5);
-  position: fixed;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-
-}
-
-.btn-sair {
-  margin-top: 1%;
-  margin-right: 92%;
-  position: absolute;
-  width: 5vw;
-  height: 4vh;
-}
-
-.btn-sair:hover {
-  cursor: pointer;
-}
-
-#btn-sair-filtro {
-  width: 100%;
-  height: 100%;
-}
-
-.escolher-filtro {
-  display: flex;
-  width: 80vw;
-  height: 69vw;
-  background-color: white;
-  position: fixed;
-  border-radius: 10px;
-  box-shadow: var(--shadow);
-  align-items: center;
-  flex-direction: column;
-  padding: 10px;
-}
-
-.filtro-text {
-  background-color: var(--primary-bg);
-  border-radius: 5px;
-  box-shadow: var(--shadow);
-  margin-top: 18px;
-  width: 80%;
-  height: 12.5%;
-
-}
-
-.filtro-btn {
-  display: flex;
-  width: 68%;
-  height: 20.5%;
-  margin-top: 12px;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 12px;
-}
-
-.filtro-btn-1 {
-  background-color: var(--primary-bg);
-  border-radius: 5px;
-  box-shadow: var(--shadow);
-  width: 30%;
-  height: 80%;
-
-}
-
-/*DASHBOARDS*/
-
-.dashboards {
-  width: 100vw;
-  flex-direction: column;
-  height: auto;
-  display: flex;
-  background-color: var(--primary-bg);
-  justify-content: center;
-  align-items: center;
-  gap: 15px;
-}
-
-.primeira-dashboard {
-  width: 80vw;
-  height: auto;
-  background-color: var(--primary-bg);
-  border-radius: 16px;
-  box-shadow: var(--shadow);
-}
-
-.segunda-dashboard {
-  width: 80vw;
-  height: auto;
-  background-color: var(--primary-bg);
-  border-radius: 16px;
-  box-shadow: var(--shadow);
-}
-
-
-/*TELA MAIOR*/
-
 @media (min-width: 1024px) {
   /*NAV BAR*/
 
@@ -455,98 +202,6 @@ body {
   .user-infos span {
       font-size: small;
       color: var(--dropdown-letter);
-  }
-
-  /*KPIS*/
-
-
-
-  .kpis {
-      flex-direction: row;
-      height: 25vh;
-  }
-
-  .primeira-divisao-kpi {
-      display: none;
-  }
-
-  .primeira-divisao-kpi2 {
-      display: flex !important;
-      flex-direction: row;
-      width: 90%;
-      gap: 40px;
-      height: 50%;
-      align-items: center;
-      justify-content: center;
-  }
-
-  .primeira-kpi {
-      height: 18vh;
-  }
-
-  .segunda-kpi {
-      height: 18vh;
-  }
-
-  .terceira-kpi {
-      height: 18vh;
-  }
-
-  .titulo-kpi {
-      font-size: 10px !important;
-  }
-
-  .dado-kpi {
-      font-size: 14px !important;
-  }
-
-  /*FILTRO*/
-
-  .filtro {
-      margin-top: 22px;
-      margin-bottom: 26px;
-  }
-
-  .filtro-aplicado {
-      width: 6%;
-      height: 57%;
-  }
-
-  .img-filtro {
-      width: 22%;
-  }
-
-  .text-filtro {
-      font-size: 10px;
-      color: var(--dropdown-letter);
-  }
-
-  .escolher-filtro{
-      width: 35%;
-      height: 47%;
-  }
-
-  .btn-sair {
-      margin-right: 85%;
-  }
-
-  #btn-sair-filtro {
-      width: 35%;
-      height: 40%;
-  }
-
-  /*DASHBOARDS*/
-
-  .dashboards{
-      flex-direction: row;
-  }
-
-  .primeira-dashboard{
-      width: 45vw;
-  }
-
-  .segunda-dashboard{
-      width: 45vw;
   }
 }
 
@@ -722,3 +377,81 @@ input:checked + .slider:before {
 transform: translateX(26px);
 }
 
+.main-container {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  padding-top: 6%;
+}
+.left-side-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+
+}
+
+.icon-background {
+  background-color: red;
+  border-radius: 100%;
+  width: 40%;
+  height: 42%;
+}
+
+.icon-background img {
+  border-radius: 100%;
+  height: 100%;
+  width: 100%;
+}
+
+.right-side-container{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 10px;
+}
+
+.user-names-container{
+  display: flex;  
+  gap: 5px;
+}
+
+/* Remove o estilo do select default */
+select{
+  -webkit-appearance: none;
+}
+
+.user-names-container select {
+  background-color: transparent;
+  border-radius: 5px;
+  border: solid 1px var(--dropdown-letter);
+  padding: 10px;
+  height: 20px;
+  width: 100%;
+  color: var(--dropdown-letter);
+  font-size: 20px;
+}
+
+.right-side-container .disabled{
+  border: none; 
+} 
+
+
+
+.right-side-container input {
+  border-radius: 5px;
+  border: solid 1px var(--dropdown-letter);
+  padding: 10px;
+  height: 15px;
+  width: 60%;
+  color: var(--dropdown-letter);
+  font-size: 24px;
+}
+
+#inputEmailUsuario {
+  color: var(--primary-green);
+}
