--- a/public/css/personal.css
+++ b/public/css/personal.css
@@ -14,6 +14,11 @@
   --dropdown-border: #2E482B;
   --dropdown-letter: #20341E;
   --primary-green: #9abe4a;
+  --primary-grey: #373A40;
+}
+
+body {
+  background-color: var(--primary-bg);
 }
 
 .mobile-nav-bar {
@@ -381,7 +386,8 @@ transform: translateX(26px);
   display: flex;
   width: 100%;
   height: 100vh;
-  padding-top: 6%;
+  align-items: start;
+  padding: 3%;
 }
 .left-side-container {
   width: 50%;
@@ -389,35 +395,53 @@ transform: translateX(26px);
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  gap: 20px;
-
 }
 
 .icon-background {
-  background-color: red;
+  background-color: transparent;
   border-radius: 100%;
-  width: 40%;
-  height: 42%;
+  height: 10%;
+  width: 30%;
 }
 
 .icon-background img {
   border-radius: 100%;
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 
 .right-side-container{
-  width: 50%;
+  width: 70%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: start;
   gap: 10px;
 }
+.right-side-container h1 {
+  font-size: 25px;
+  margin-top: 0;
+}
+
+.user-infos-header {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.user-infos-header h1 {
+  color: var(--dropdown-letter);
+}
+
+.user-infos-header p {
+  opacity: 90%;
+  color: var(--primary-grey);
+}
 
 .user-names-container{
   display: flex;  
-  gap: 5px;
+  align-items: center;
+  gap: 20px;
 }
 
 /* Remove o estilo do select default */
@@ -429,29 +453,89 @@ select{
   background-color: transparent;
   border-radius: 5px;
   border: solid 1px var(--dropdown-letter);
-  padding: 10px;
-  height: 20px;
+  height: 30px;
   width: 100%;
   color: var(--dropdown-letter);
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .right-side-container .disabled{
   border: none; 
 } 
 
-
-
 .right-side-container input {
   border-radius: 5px;
   border: solid 1px var(--dropdown-letter);
   padding: 10px;
   height: 15px;
-  width: 60%;
+  width: 100%;
   color: var(--dropdown-letter);
-  font-size: 24px;
+  font-size: 15px;
+}
+
+.user-names-box{
+  background-color: white;
+  border: 1px solid var(--primary-green);
+  border-radius: 10px;
+  width: 20vw;
+  padding: 12px;
+  display: flex;
+  height: 15vh;
+  justify-content: start;
+  flex-direction: column;
+}
+
+.user-names-box h1{
+  font-size: 18px;
 }
 
 #inputEmailUsuario {
   color: var(--primary-green);
+}
+
+.file-upload-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  font-family: Arial, sans-serif;
+}
+
+.custom-file-input {
+  border: 2px dashed var(--primary-green);
+  padding: 10px;
+  cursor: pointer;
+  color: var(--primary-green);
+  background-color: #f9f9f9;
+  transition: background-color 0.3s;
+}
+
+.custom-file-input:hover {
+  background-color: #eee;
+}
+
+.user-static-infos-container{
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+  align-items: start;
+  gap: 10px;
+}
+
+.user-static-infos{
+  display: flex;
+  flex-direction: column;
+}
+
+.user-static-infos h3 {
+  margin: 0;
+}
+
+#userName{
+  color: var(--dropdown-letter);
+}
+
+#userEmail{
+  color: var(--primary-grey);
+  opacity: 90%;
 }
