--- a/public/css/style.css
+++ b/public/css/style.css
@@ -406,6 +406,7 @@ body {
       text-decoration: none;
       transition: 0.2s;
       cursor:pointer;
+      color: black;
   }
 
   .img-nav-alerta {
