--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -128,11 +128,16 @@ body {
 .side-bar-links-container {
   display: flex;
   flex-direction: column;
-  gap: 70px;
-  height: 88%;
+  gap: 50px;
+  height: 100%;
   width: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
+  margin-top: 60px;
+}
+
+.side-bar-links-container a{
+  font-size: 15px;
 }
 
 .side-bar-links-container a:hover {
@@ -553,6 +558,14 @@ body {
   .segunda-dashboard{
       width: 45vw;
   }
+
+  .side-bar.user-container{
+    display: flex !important; 
+  }
+
+  .contem-alerta.not{
+    display: none !important;
+  }
 }
 
 .nav-selected {
@@ -725,5 +738,9 @@ background-color: #3C3D37;
 
 input:checked + .slider:before {
 transform: translateX(26px);
+}
+
+.contem-alerta.not{
+  display: flex;
 }
 
