Mudanças feitas na KPI e adicionando KPIs na dash do feedback

--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -241,6 +241,11 @@ body {
   align-items: center;
 }
 
+.filtroSelecionado {
+  width: 100vw;
+  margin-left: 10%;  
+}
+
 .filtro-aplicado {
   display: flex;
   flex-direction: row;
@@ -733,4 +738,5 @@ background-color: #3C3D37;
 input:checked + .slider:before {
 transform: translateX(26px);
 }
+
 
