Esqueci de colocar a div para sinalizar os filtros

--- a/site/public/css/feedbackDash.css
+++ b/site/public/css/feedbackDash.css
@@ -242,6 +242,11 @@ body {
   align-items: center;
 }
 
+.filtroSelecionado {
+  width: 100vw;
+  margin-left: 10%;  
+}
+
 .filtro-aplicado {
   display: flex;
   flex-direction: row;
